--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@npmcli/config": "^6.1.6",
     "commander": "^10.0.1",
     "lodash": "^4.17.21"
   },
