--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,7 +9,7 @@ parserOptions:
 rules: 
   no-console : 0
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }] 
-  mport/extensions:
+  import/extensions:
   - error 
   - ignorePackages 
   - js: always 
