--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "type": "module",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/Joytforname/frontend-bootcamp-project-46/workflows/hexlet-check/badge.svg)](https://github.com/Joytforname/frontend-bootcamp-project-46/actions)",
+  "description": "Compares two files and shows a difference.",
   "main": "src/index.js",
   "bin": {
     "gendiff": "bin/gendiff.js"
